--- a/src/bootstrap/home.css
+++ b/src/bootstrap/home.css
@@ -2,10 +2,18 @@
 	width:1170px;
 }
 
+.content {
+	padding:60px;
+}
+
 .header {
 	position:relative;
 	min-height: 800px;
 	height: 100%;
+}
+
+.footer {
+	padding:140px 0;
 }
 
 .nav {
@@ -63,5 +71,21 @@
 }
 
 section {
-	margin-top:200px;
+	margin-top:20px;
+}
+
+.btn {
+	margin:60px 0;
+	background:  #e74c3c;
+	border:0; outline:0;
+	border-radius:6px;
+
+	font-size: 1.3em;
+	color:white;
+	padding: 10px 14px;
+}
+
+.btn:hover {
+	cursor:pointer;
+	background:rgb(233, 233, 233);
 }
