--- a/src/bootstrap/fonts.css
+++ b/src/bootstrap/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'maple';
-	src:url('fonts/maple.eot');
-	src:url('fonts/maple.eot?#iefix') format('embedded-opentype'),
-		url('fonts/maple.woff') format('woff'),
-		url('fonts/maple.ttf') format('truetype'),
-		url('fonts/maple.svg#maple') format('svg');
+	src:url('./fonts/maple.eot');
+	src:url('./fonts/maple.eot?#iefix') format('embedded-opentype'),
+		url('./fonts/maple.woff') format('woff'),
+		url('./fonts/maple.ttf') format('truetype'),
+		url('./fonts/maple.svg#maple') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
