--- a/src/bootstrap/reset.styl
+++ b/src/bootstrap/reset.styl
@@ -1,7 +1,5 @@
 * {
-	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html {
@@ -17,27 +15,18 @@ body {
 	padding: 0;
 }
 body {
-	background-color: #fff;
+	background: #fff;
 	color: #7f8c8d;
 	font-family: "freight-sans-pro","Myriad Pro","Myriad",sans-serif;
 	font-size: 1.4em;
 	line-height: 1.5; 
-	-webkit-font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	-ms-font-smoothing: antialiased;
-	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 }
 
 ::selection {
 	background: #e74c3c;
 	color:white;
-	}
-::-moz-selection {
-	background: #e74c3c;
-	color:white;
 }
-
 
 ul,
 ol {
