--- a/src/showcase/showcase.styl
+++ b/src/showcase/showcase.styl
@@ -7,14 +7,15 @@
 }
 
 .toolbar {
-	height:42px;
+	height:52px;
 	background:#1E1E1E;
 }
 
 .toolbar-btn {
+	font-size: 1.5em;
 	cursor:pointer;
 	color:#cccbd0;
-	line-height:42px;
+	line-height:52px;
 	padding:0 16px;
 	background:rgba(255, 255, 255, .05);
 }
@@ -23,4 +24,8 @@
 .toolbar-btn:hover {
 	cursor:pointer;
 	color:white;
+}
+
+.stack {
+	padding-top:100px;
 }
