--- a/src/bootstrap/home.styl
+++ b/src/bootstrap/home.styl
@@ -27,12 +27,29 @@
 	bottom:0;
 }
 
+.next .icon-down {
+	line-height: 50px;
+	color: #7f8c8d;
+	font-size: 2.5em;
+}
+
 .scroll {
 	border:0; outline:0;
 	width:50px; height:50px;
 	border-radius: 50%;
 	background:rgb(233, 233, 233);
+	transition:.1s all ease-in;
 }
+
+.scroll:hover {
+	cursor:pointer;
+	background:#2c3e50;
+	/* transform: scale(1.1); */
+}
+
+.scroll:hover .icon-down {
+		color:white;
+	}
 
 .link {
 	font-size: 1.1em;
@@ -68,10 +85,6 @@
 	height:198px;
 	margin:80px auto 20px auto;
 	display: block;
-}
-
-section {
-	margin-top:20px;
 }
 
 .btn {
