working on website template

--- a/src/todo/todo.styl
+++ b/src/todo/todo.styl
@@ -11,6 +11,7 @@ input[type="checkbox"] {
 }
 
 #todoapp {
+    position:relative;
     width:600px;
     margin:0 auto;
         background: #fff;
@@ -30,6 +31,11 @@ input[type="checkbox"] {
         top: 0;
         left: 40px;
         height: 100%;
+}
+
+.benchmark {
+    position:absolute;
+    top:-40px;
 }
 
 #todoapp input::-webkit-input-placeholder {
