--- a/public/maple.css
+++ b/public/maple.css
@@ -674,6 +674,7 @@ input[type="checkbox"] {
 }
 
 #todoapp {
+  position: relative;
   width: 600px;
   margin: 0 auto;
   background: #fff;
@@ -695,6 +696,11 @@ input[type="checkbox"] {
   top: 0;
   left: 40px;
   height: 100%;
+}
+
+.benchmark {
+  position: absolute;
+  top: -40px;
 }
 
 #todoapp input::-webkit-input-placeholder {
@@ -1191,7 +1197,7 @@ hr {
   width: 100%;
   height: 100%;
   background: #121212;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .toolbar {
