--- a/src/bootstrap/home.styl
+++ b/src/bootstrap/home.styl
@@ -57,6 +57,7 @@
 	padding:10px 20px;
 	letter-spacing: 2px;
 	color: #bdc3c7;
+	transition:.1s color ease-in;
 }
 
 .active, .link:hover {
@@ -96,9 +97,10 @@
 	font-size: 1.3em;
 	color:white;
 	padding: 10px 14px;
+	transition:.1s background ease-out;
 }
 
 .btn:hover {
 	cursor:pointer;
-	background:rgb(233, 233, 233);
+	background:#7f8c8d;
 }
