--- a/src/bootstrap/reset.styl
+++ b/src/bootstrap/reset.styl
@@ -69,12 +69,12 @@ caption,
 details,
 figure {
 	margin: .75em 0 0;
-	line-height: 1.5;
+	line-height: 1.7;
 }
 
 h1,h2,h3,h4 {
 	color: #2c3e50;
-	font-weight: 600;
+	font-weight: normal;
 }
 
 h1{
@@ -283,6 +283,7 @@ img.left, img.right {
 .autogrid2 > * {
   width: 49%;
   padding:20px 40px;
+  //font-weight:300;
 }
 
 .autogrid3 > * {
