--- a/src/showcase/showcase.styl
+++ b/src/showcase/showcase.styl
@@ -27,5 +27,16 @@
 }
 
 .stack {
+	height: 100%;
+	width: 70%;
 	padding-top:100px;
+}
+
+.examples-content {
+	height:100%;
+}
+
+.examples-list {
+	width:30%;
+	height:100%;
 }
