--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
-  <link rel="stylesheet" href="/assets/maple.css"/>
+  <link rel="stylesheet" href="./assets/maple.css"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link href="{{ site_url }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.inc.title }}" />
   <meta name="title" content="{% if page.title %}{{ page.title }} {% else %}{{ site.inc.title }}{% endif %}">
@@ -16,6 +16,6 @@
 </head>
 <body>
     {{ content }}
-    <script src="/assets/maple.js"></script>
+    <script src="./assets/maple.js"></script>
 </body>
 </html>
