--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,5 +17,8 @@
 <body>
     {{ content }}
     <script src="./assets/maple.js"></script>
+    <script>
+      require('showcase');
+    </script>
 </body>
 </html>
